--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
   margin:0;
   padding:0;
@@ -9,42 +10,11 @@
   font-family:"Poppins", sans-serif;
   line-height: 1; 
 }
-.body-principal{
+
+.body--blue{
   background-color: rgb(1, 82, 135);
 }
-h1{
-  font-size:2.7em;
-  color: rgb(1, 82, 135);
-  text-align: center;
-}
-h2{
-  color:rgb(1, 82, 135);
-  font-size:2.4em;
-  text-align: center;
-}
-p{
-  font-size: 0.9em;
-  line-height: 1.3;
-  margin:0 auto;
-  color:rgb(1, 82, 135) ;
-  width: 85%;
-  font-weight: 300;
-}
-.h1_white{
-  color:white;
-}
-.button-principal{
-  width:200px;
-  height: 60px;
-  border-radius:40px;
-  background-color: white;
-  font-weight: bold;
-  font-size: 1em;
-}
-.button_disabled{
-  color: gray;
-  border: 2px solid gray;
-}
+
 .header{
   position: fixed;
   z-index: 2;
@@ -57,29 +27,29 @@ p{
   font-size: 0.8em;
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.5)
 }
-.header-menu{
+.header__menu{
   margin-left:40px;
   stroke: white;
 }
-.header-logo{
+.header__logo{
   padding:10px 0;
   width:60px;
   height: max-content;
   border-radius: 9999px;
 }
-.header-search{
+.header__search{
   margin-right:30px;
 }
 .active span{
   text-decoration: underline 2px rgb(1, 82, 135);
   text-underline-offset: 4px;
 }
-.nav-bar a{
+.header__nav-bar a{
   color:white;
   display:block;
   padding: 20px 10px;
 }
-.nav-bar{
+.header__nav-bar{
   margin-right: 30px;
   width: max-content;
   display:flex;
@@ -87,7 +57,7 @@ p{
   display: none;
 }
 
-.nav-bar_mobile{
+.header__nav-bar--mobile{
   overflow-y: auto;
   overflow-x: hidden;
   top:0;
@@ -104,47 +74,40 @@ p{
   align-items: center;
   display: none;
 }
-.nav-bar_mobile-logo{
-  top:50%;
-  transform: translateY(-50%);
-  width: 400px;
-  position:absolute;
-  opacity: 30%;
-  right:90px;
-}
-.nav-bar_mobile-fechar{
+.header__nav-bar--mobile__fechar{
   margin-top: 20px;
   margin-right: 40px;
   width: 100%;
   display: flex;
   justify-content: flex-end;
 }
-.nav-bar_mobile ul{
+
+.header__nav-bar--mobile ul{
   width: 100%;
 }
-.nav-bar_mobile li{
+.header__nav-bar--mobile li{
   gap:15px;
   align-items: left;
   display: flex;
   width: 100%;
 }
-.nav-bar_mobile_inicio{
+.header__nav-bar--mobile__inicio{
   margin-top:15px;
   border-top: 2px solid rgb(1, 82, 135);
 }
-.nav-bar_mobile_meio{
+.header__nav-bar--mobile__meio{
     border-top: 2px solid rgb(1, 82, 135);
 }
-.nav-bar_mobile_fim{
+.header__nav-bar--mobile__fim{
   border-bottom: 2px solid rgb(1, 82, 135);
   border-top: 2px solid rgb(1, 82, 135);
 }
-.nav-bar_mobile i{
+.header__nav-bar--mobile i{
   color: rgb(1, 82, 135);
   font-size: 20px;
   width:25px;
 }
-.nav-bar_mobile a{
+.header__nav-bar--mobile a{
   display: flex;
   justify-content: flex-start;
   text-align: left;
@@ -154,14 +117,13 @@ p{
   padding: 20px 20px;
   font-size: 1.3em;
 }
-.nav-bar_mobile a:active,.nav-bar_mobile a:active i{
+.header__nav-bar--mobile a:active,.header__nav-bar--mobile a:active i{
   background-color:rgb(1, 82, 135);
   color:white;
 }
 .separar-header{
   padding: 20px 0;
 }
-/* MAIN INDEX */
 .main{
   display: flex;
   flex-direction: column;
@@ -176,12 +138,12 @@ p{
   height: 300px;
   display: flex;
 }
-.boas-vindas-img{
+.boas-vindas__img{
   width:100%;
   height: 70%;
   object-fit: cover;
 }
-.boas-vindas-shadow{
+.boas-vindas__shadow{
   position:absolute;
   z-index: 2;
   width:100%;
@@ -189,7 +151,7 @@ p{
   height: 100px;
   background:linear-gradient(to top, rgb(1, 82, 135) 10%, transparent 100%);
 }
-.boas-vindas-container{
+.boas-vindas__container{
   width: 100%;
   height: max-content;
   align-items: center;
@@ -202,20 +164,28 @@ p{
   left:50%;
   transform:translateX(-50%);
 }
-.boas-vindas-p{
+.boas-vindas__title{
+  font-size: 2.5em;
+  color:white;
+}
+.boas-vindas__subtitle{
   width: 90%;
   margin-bottom:20px;
   color: white;
 }
-.titulo{
-  display: flex;
-  flex-direction: column;
-  gap:15px;
-  text-align: justify;
-}
-.titulo span{
+.button{
+  width:200px;
+  height: 60px;
+  border-radius:40px;
+  background-color: white;
   font-weight: bold;
+  font-size: 1em;
 }
+.button--disabled{
+  color: gray;
+  border: 2px solid gray;
+}
+
 .video{
   text-align: center;
   color:white;
@@ -232,30 +202,29 @@ p{
   border-radius: 20px;
 }
 
-.historia p{
+.titulo{
+  text-align: center;
+  color:rgb(1, 82, 135) ;
+  font-size: 2.5em;
+  line-height: 1.2;
+}
+.historia__descricao{
   line-height: 1.3;
+  letter-spacing: -1px;
   margin:0 auto;
-  color:white;
-  width: 80%;
-  font-weight: 200;
+  width: 85%;
+  font-weight: 300;
   text-align:justify;
 }
 .historia span{
   font-weight: bold;
 }
-.historia_white h1{
-  line-height: 2;
+.historia--white{
+  color:rgb(255, 255, 255) ;
 }
-.historia_white p{
-  line-height: 1.3;
-  margin:0 auto;
+
+.historia--blue{
   color:rgb(1, 82, 135) ;
-  width: 85%;
-  font-weight: 300;
-  text-align:justify;
-}
-.historia_white span{
-  font-weight: bold;
 }
 .figures{
   gap:60px;
@@ -285,12 +254,17 @@ p{
   color:white;
   gap:10px;
 }
+.titulo span{
+  font-weight: bold;
+}
 .missao{
   text-align: center;
 }
-/* ------------------------ */
-
-/* CSS PARA POSTS GALERIA STYLE */
+.lista{
+  color:rgb(1, 82, 135) ;
+  font-size: 15px;
+  list-style: circle;
+}
 .galeria{
   justify-content: center;
   align-items: center;
