--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
   padding:0;
   box-sizing: border-box;
   text-decoration: none;
-  list-style: none;
   border:none;
   font-family:"Poppins", sans-serif;
   line-height: 1; 
@@ -169,6 +168,7 @@
   color:white;
 }
 .boas-vindas__subtitle{
+  font-size: 0.9em;
   width: 90%;
   margin-bottom:20px;
   color: white;
@@ -195,18 +195,26 @@
   flex-direction: column;
   align-items: center;
 }
-.video h2{
-  width: 90%;
+.video_title{
+  font-weight: bold;
+  font-size: 1em;
 }
-.video-video{
+.video__video{
   border-radius: 20px;
 }
 
 .titulo{
   text-align: center;
   color:rgb(1, 82, 135) ;
-  font-size: 2.5em;
+  font-size: 2.3em;
   line-height: 1.2;
+}
+.historia{
+  margin: auto;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  gap:10px;
 }
 .historia__descricao{
   line-height: 1.3;
@@ -233,14 +241,14 @@
   flex-direction: column;
   align-items: center;
 }
-.figures-section{
+.figures__section{
   gap:20px;
   display:flex;
   flex-direction: column;
   align-items: center;
   
 }
-.figures-section p{
+.figures__subtitle{
   color:white;
   font-size: 1.2em;
   width: 70%;
@@ -254,16 +262,25 @@
   color:white;
   gap:10px;
 }
+.maps__title{
+  font-size: 1.3em;
+}
 .titulo span{
   font-weight: bold;
 }
 .missao{
-  text-align: center;
+  list-style-position: inside;
+  margin: auto;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap:10px;
+
 }
 .lista{
   color:rgb(1, 82, 135) ;
   font-size: 15px;
-  list-style: circle;
 }
 .galeria{
   justify-content: center;
@@ -272,7 +289,7 @@
   flex-flow: column wrap;
   gap:30px;
 }
-.galeria-card{
+.galeria__card{
   overflow: hidden;
   width: 250px;
   height: 220px;
@@ -280,12 +297,12 @@
   border-radius: 20px;
   color: rgb(1, 82, 135);
 }
-.galeria-card img{
+.galeria__img{
   object-fit: cover;
   width:100%;
   height: 130px;
 }
-.galeria-text{
+.galeria__text{
   height: calc(100% - 140px);
   display:flex;
   justify-content: center;
