--- a/style.css
+++ b/style.css
@@ -10,8 +10,18 @@
   line-height: 1; 
 }
 
+.body{
+  display:flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 .body--blue{
   background-color: rgb(1, 82, 135);
+}
+
+.main{
+  flex:1;
 }
 
 .header{
@@ -123,6 +133,9 @@
 .separar-header{
   padding: 20px 0;
 }
+.separar-footer{
+  padding: 20px 0;
+}
 .main{
   display: flex;
   flex-direction: column;
@@ -133,7 +146,7 @@
   margin-top: 50px;
   position: relative;
   z-index: 1;
-  width:100vw;
+  width:100%;
   height: 300px;
   display: flex;
 }
@@ -311,7 +324,20 @@
 }
 /* ----------------------- */
 /*FOOTER*/
-.footer p{
-  color:white;
+.footer{
+  width: 100%;
+  background-color: white;
+  padding: 20px;
+  color:rgb(1, 82, 135);
+
+}
+.footer--blue{
+  background-color: rgb(1, 82, 135);
+  color: white;
+}
+.footer__text{
+  text-align: center;
+  font-weight: bold;
+  font-size: 0.8em;
 }
 /*TABLETS*/
