--- a/estilo/style.css
+++ b/estilo/style.css
@@ -140,7 +140,7 @@
 .main{
   display: flex;
   flex-direction: column;
-  gap:60px;
+  gap:50px;
 }
 .boas-vindas{
   background-color: var(--azul);
@@ -209,7 +209,7 @@
   flex-direction: column;
   align-items: center;
 }
-.video_title{
+.video__title{
   font-weight: bold;
   font-size: 1em;
 }
@@ -324,6 +324,45 @@
   flex-flow: column wrap;
   text-align: center;
 }
+.document__container{
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+}
+.document{
+  display: flex;
+  width: 240px;
+  height: 120px;
+  gap:10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin:0 auto;
+  background-color: var(--azul);
+  border-radius: 20px;
+}
+.document__title{
+  font-size: 1.5em;
+  color:white;
+}
+.document__subtitle{
+  font-weight: bold;
+  color: var(--azul);
+  background-color: white;
+  border-radius: 20px;
+  transition: transform 0.3s ease;
+}
+.document:hover .document__subtitle{
+  transform: scale(1.07);
+}
+.document__download{
+  padding: 10px 14px; 
+  color:var(--azul);
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
 /* ----------------------- */
 /*FOOTER*/
 footer.footer-all{
