--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,14 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-:root{
-  --azul: rgb(16,55,88);
-}
 
 *{
   margin:0;
   padding:0;
   box-sizing: border-box;
   text-decoration: none;
-  
   border:none;
   font-family:"Poppins", sans-serif;
   line-height: 1; 
@@ -21,7 +17,7 @@
 }
 
 .body--blue{
-  background-color: var(--azul);
+  background-color: rgb(1, 82, 135);
 }
 
 .main{
@@ -35,7 +31,7 @@
   top:0;
   display: flex;
   justify-content: space-between;
-  background-color: var(--azul);
+  background-color: rgb(1, 82, 135);
   align-items: center;
   font-size: 0.8em;
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.5)
@@ -54,7 +50,7 @@
   margin-right:30px;
 }
 .active span{
-  text-decoration: underline 2px var(--azul);
+  text-decoration: underline 2px rgb(1, 82, 135);
   text-underline-offset: 4px;
 }
 .header__nav-bar a{
@@ -106,17 +102,17 @@
 }
 .header__nav-bar--mobile__inicio{
   margin-top:15px;
-  border-top: 2px solid var(--azul);
+  border-top: 2px solid rgb(1, 82, 135);
 }
 .header__nav-bar--mobile__meio{
-    border-top: 2px solid var(--azul);
+    border-top: 2px solid rgb(1, 82, 135);
 }
 .header__nav-bar--mobile__fim{
-  border-bottom: 2px solid var(--azul);
-  border-top: 2px solid var(--azul);
+  border-bottom: 2px solid rgb(1, 82, 135);
+  border-top: 2px solid rgb(1, 82, 135);
 }
 .header__nav-bar--mobile i{
-  color: var(--azul);
+  color: rgb(1, 82, 135);
   font-size: 20px;
   width:25px;
 }
@@ -126,12 +122,12 @@
   text-align: left;
   gap:10px;
   width: 100%;
-  color:var(--azul);
+  color:rgb(1, 82, 135);
   padding: 20px 20px;
   font-size: 1.3em;
 }
 .header__nav-bar--mobile a:active,.header__nav-bar--mobile a:active i{
-  background-color:var(--azul);
+  background-color:rgb(1, 82, 135);
   color:white;
 }
 .separar-header{
@@ -141,10 +137,10 @@
 .main{
   display: flex;
   flex-direction: column;
-  gap:50px;
+  gap:60px;
 }
 .boas-vindas{
-  background-color: var(--azul);
+  background-color: rgb(1, 82, 135);
   margin-top: 50px;
   position: relative;
   z-index: 1;
@@ -163,7 +159,7 @@
   width:100%;
   bottom:29%;
   height: 100px;
-  background:linear-gradient(to top, var(--azul) 10%, transparent 100%);
+  background:linear-gradient(to top, rgb(1, 82, 135) 10%, transparent 100%);
 }
 .boas-vindas__container{
   width: 100%;
@@ -205,12 +201,12 @@
   text-align: center;
   color:white;
   gap:10px;
-  background-color: var(--azul);
+  background-color: rgb(1, 82, 135);
   display:flex;
   flex-direction: column;
   align-items: center;
 }
-.video__title{
+.video_title{
   font-weight: bold;
   font-size: 1em;
 }
@@ -220,7 +216,7 @@
 
 .titulo{
   text-align: center;
-  color:var(--azul);
+  color:rgb(1, 82, 135) ;
   font-size: 2.3em;
   line-height: 1.2;
 }
@@ -247,7 +243,7 @@
 }
 
 .historia--blue{
-  color:var(--azul);
+  color:rgb(1, 82, 135) ;
 }
 .figures{
   gap:60px;
@@ -280,6 +276,9 @@
 .maps__title{
   font-size: 1.3em;
 }
+.titulo span{
+  font-weight: bold;
+}
 .missao{
   list-style-position: inside;
   margin: auto;
@@ -291,10 +290,9 @@
 
 }
 .lista{
-  color:var(--azul);
+  color:rgb(1, 82, 135) ;
   font-size: 16px;
 }
-
 .galeria{
   justify-content: center;
   align-items: center;
@@ -306,9 +304,9 @@
   overflow: hidden;
   width: 250px;
   height: 220px;
-  border: 5px solid var(--azul);
+  border: 5px solid rgb(1, 82, 135);
   border-radius: 20px;
-  color: var(--azul);
+  color: rgb(1, 82, 135);
   transition: transform 0.3s ease
 }
 .galeria__card:hover{
@@ -326,45 +324,6 @@
   flex-flow: column wrap;
   text-align: center;
 }
-.document__container{
-  display: flex;
-  flex-direction: column;
-  gap:10px;
-}
-.document{
-  display: flex;
-  width: 240px;
-  height: 120px;
-  gap:10px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin:0 auto;
-  background-color: var(--azul);
-  border-radius: 20px;
-}
-.document__title{
-  font-size: 1.5em;
-  color:white;
-}
-.document__subtitle{
-  font-weight: bold;
-  color: var(--azul);
-  background-color: white;
-  border-radius: 20px;
-  transition: transform 0.3s ease;
-}
-.document:hover .document__subtitle{
-  transform: scale(1.07);
-}
-.document__download{
-  padding: 10px 14px; 
-  color:var(--azul);
-  width: 100%;
-  height: 100%;
-  display: block;
-}
-
 /* ----------------------- */
 /*FOOTER*/
 footer.footer-all{
@@ -375,13 +334,13 @@ footer.footer-all{
 
 footer.footer-all > p {
   text-align: center;
-  color: var(--azul);
+  color: rgb(1, 82, 135);
   font-weight: bold;
   font-size: 13px;
 }
 
 footer.footer-all-white{
-  background-color: var(--azul);
+  background-color: rgb(1, 82, 135);
   padding: 15px;
   margin-top: 30px;
 }
