--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root{
+  --azul: rgb(16,55,88);
+}
+
 *{
   margin:0;
   padding:0;
@@ -17,7 +21,7 @@
 }
 
 .body--blue{
-  background-color: rgb(1, 82, 135);
+  background-color: var(--azul);
 }
 
 .main{
@@ -31,7 +35,7 @@
   top:0;
   display: flex;
   justify-content: space-between;
-  background-color: rgb(1, 82, 135);
+  background-color: var(--azul);
   align-items: center;
   font-size: 0.8em;
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.5)
@@ -50,7 +54,7 @@
   margin-right:30px;
 }
 .active span{
-  text-decoration: underline 2px rgb(1, 82, 135);
+  text-decoration: underline 2px var(--azul);
   text-underline-offset: 4px;
 }
 .header__nav-bar a{
@@ -102,17 +106,17 @@
 }
 .header__nav-bar--mobile__inicio{
   margin-top:15px;
-  border-top: 2px solid rgb(1, 82, 135);
+  border-top: 2px solid var(--azul);
 }
 .header__nav-bar--mobile__meio{
-    border-top: 2px solid rgb(1, 82, 135);
+    border-top: 2px solid var(--azul);
 }
 .header__nav-bar--mobile__fim{
-  border-bottom: 2px solid rgb(1, 82, 135);
-  border-top: 2px solid rgb(1, 82, 135);
+  border-bottom: 2px solid var(--azul);
+  border-top: 2px solid var(--azul);
 }
 .header__nav-bar--mobile i{
-  color: rgb(1, 82, 135);
+  color: var(--azul);
   font-size: 20px;
   width:25px;
 }
@@ -122,12 +126,12 @@
   text-align: left;
   gap:10px;
   width: 100%;
-  color:rgb(1, 82, 135);
+  color:var(--azul);
   padding: 20px 20px;
   font-size: 1.3em;
 }
 .header__nav-bar--mobile a:active,.header__nav-bar--mobile a:active i{
-  background-color:rgb(1, 82, 135);
+  background-color:var(--azul);
   color:white;
 }
 .separar-header{
@@ -140,7 +144,7 @@
   gap:60px;
 }
 .boas-vindas{
-  background-color: rgb(1, 82, 135);
+  background-color: var(--azul);
   margin-top: 50px;
   position: relative;
   z-index: 1;
@@ -159,7 +163,7 @@
   width:100%;
   bottom:29%;
   height: 100px;
-  background:linear-gradient(to top, rgb(1, 82, 135) 10%, transparent 100%);
+  background:linear-gradient(to top, var(--azul) 10%, transparent 100%);
 }
 .boas-vindas__container{
   width: 100%;
@@ -201,12 +205,12 @@
   text-align: center;
   color:white;
   gap:10px;
-  background-color: rgb(1, 82, 135);
+  background-color: var(--azul);
   display:flex;
   flex-direction: column;
   align-items: center;
 }
-.video_title{
+.video__title{
   font-weight: bold;
   font-size: 1em;
 }
@@ -216,7 +220,7 @@
 
 .titulo{
   text-align: center;
-  color:rgb(1, 82, 135) ;
+  color:var(--azul);
   font-size: 2.3em;
   line-height: 1.2;
 }
@@ -243,7 +247,7 @@
 }
 
 .historia--blue{
-  color:rgb(1, 82, 135) ;
+  color:var(--azul);
 }
 .figures{
   gap:60px;
@@ -290,7 +294,7 @@
 
 }
 .lista{
-  color:rgb(1, 82, 135) ;
+  color:var(--azul);
   font-size: 16px;
 }
 .galeria{
@@ -304,9 +308,9 @@
   overflow: hidden;
   width: 250px;
   height: 220px;
-  border: 5px solid rgb(1, 82, 135);
+  border: 5px solid var(--azul);
   border-radius: 20px;
-  color: rgb(1, 82, 135);
+  color: var(--azul);
   transition: transform 0.3s ease
 }
 .galeria__card:hover{
@@ -324,6 +328,44 @@
   flex-flow: column wrap;
   text-align: center;
 }
+.document__container{
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+}
+.document{
+  display: flex;
+  width: 240px;
+  height: 120px;
+  gap:10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin:0 auto;
+  background-color: var(--azul);
+  border-radius: 20px;
+}
+.document__title{
+  font-size: 1.5em;
+  color:white;
+}
+.document__subtitle{
+  font-weight: bold;
+  color: var(--azul);
+  background-color: white;
+  border-radius: 20px;
+  transition: transform 0.3s ease;
+}
+.document:hover .document__subtitle{
+  transform: scale(1.07);
+}
+.document__download{
+  padding: 10px 14px; 
+  color:var(--azul);
+  width: 100%;
+  height: 100%;
+  display: block;
+}
 /* ----------------------- */
 /*FOOTER*/
 footer.footer-all{
@@ -334,13 +376,13 @@ footer.footer-all{
 
 footer.footer-all > p {
   text-align: center;
-  color: rgb(1, 82, 135);
+  color: var(--azul);
   font-weight: bold;
   font-size: 13px;
 }
 
 footer.footer-all-white{
-  background-color: rgb(1, 82, 135);
+  background-color: var(--azul);
   padding: 15px;
   margin-top: 30px;
 }
